FIx paddings and gaps in all sections

--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0px;
-    min-height: 100vh
+    min-height: 100vh;
+    gap: 50px;
 }
 
 .top {
@@ -82,7 +83,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 90px;
 }
 
 .app-logo {
@@ -90,4 +91,19 @@ footer {
     flex-direction: column;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.quote-block {
+    display: flex;
+    background-color: #E5E7EB;
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+}
+
+.quote-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 600px 100px 600px;
 }
